; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_nuv.c_nuv_resync.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_nuv.c_nuv_resync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i64)* @nuv_resync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nuv_resync(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %6, align 8
  store i32 0, i32* %7, align 4
  br label %11

11:                                               ; preds = %42, %2
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @avio_feof(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %20, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %6, align 8
  %17 = call i64 @avio_tell(i32* %16)
  %18 = load i64, i64* %5, align 8
  %19 = icmp slt i64 %17, %18
  br label %20

20:                                               ; preds = %15, %11
  %21 = phi i1 [ false, %11 ], [ %19, %15 ]
  br i1 %21, label %22, label %43

22:                                               ; preds = %20
  %23 = load i32, i32* %7, align 4
  %24 = shl i32 %23, 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @avio_r8(i32* %25)
  %27 = or i32 %24, %26
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @MKBETAG(i8 signext 82, i8 signext 84, i8 signext 106, i8 signext 106)
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %31, label %42

31:                                               ; preds = %22
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @avio_rb32(i32* %32)
  store i32 %33, i32* %7, align 4
  %34 = call i32 @MKBETAG(i8 signext 106, i8 signext 106, i8 signext 106, i8 signext 106)
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %42

36:                                               ; preds = %31
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @avio_rb32(i32* %37)
  store i32 %38, i32* %7, align 4
  %39 = call i32 @MKBETAG(i8 signext 106, i8 signext 106, i8 signext 106, i8 signext 106)
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  store i32 1, i32* %3, align 4
  br label %44

42:                                               ; preds = %36, %31, %22
  br label %11

43:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %43, %41
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @avio_feof(i32*) #1

declare dso_local i64 @avio_tell(i32*) #1

declare dso_local i32 @avio_r8(i32*) #1

declare dso_local i32 @MKBETAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i32 @avio_rb32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
